# Fletcher-SigmaX

codegen/cerata/src/cerata/: api.h  domain.h  edge.cc  graph.cc  graph.h  logging.h  node.cc  node.h  node_array.cc  node_array.h  type.cc  type.h
codegen/cerata/src/cerata/vhdl/: block.cc  design.cc  resolve.cc
codegen/cerata/test/cerata/: test_designs.h
codegen/cerata/test/cerata/vhdl/: test_instantiators.cc
codegen/fletchgen/: CMakeLists.txt
codegen/fletchgen/src/fletchgen/: array.cc  basic_types.cc  basic_types.h  bus.cc  bus.h  design.cc  kernel.cc  mantle.cc  mmio.cc  mmio.h  nucleus.cc  nucleus.h  profiler.cc  profiler.h  recordbatch.cc
codegen/fletchgen/src/fletchgen/srec/: recordbatch.cc
codegen/fletchgen/src/fletchgen/top/: sim.cc
codegen/fletchgen/test/fletchgen/: test_profiler.cc
common/cpp/include/fletcher/: arrow-recordbatch.h  arrow-schema.h  arrow-utils.h
common/cpp/src/fletcher/: arrow-recordbatch.cc  arrow-schema.cc  arrow-utils.cc
common/cpp/test/fletcher/: test_visitors.cc
docs/: mmio.md
examples/: CMakeLists.txt
examples/posits/hardware/: arrow_positdot.vhd  arrow_positdot_pkg.vhd  positdot_unit.vhd
examples/posits/software/: CMakeLists.txt
examples/posits/software/src/: posits.cc
hardware/: README.md
hardware/test/columnreader/: .gitignore  gen_tb.py
runtime/cpp/: CMakeLists.txt
